# casego-pytest-cli

./: .gitignore  AGENTS.md  AI_SKILL_READINESS_PROGRESS.md  CLAUDE.md  MIGRATION_GUIDE.md  README.md  RELEASE_PROCESS.md  TASK_PROGRESS.md  cli.py  pyproject.toml  requirements.txt  run.py
common/: setting.py
data/Login/: login.yaml
docs/: apifoxcli-native-design.md
pytest_auto_api2/: __init__.py  cli.py
pytest_auto_api2/apifoxcli/: __init__.py  assertions.py  cli.py  context.py  contract.py  execution_log.py  extractor.py  loader.py  models.py  openapi_importer.py  planner.py  resolver.py  resource_store.py  run_reports.py  runner.py  scaffold.py  source_sync.py  sync_report.py  validator.py
pytest_auto_api2/common/: setting.py
pytest_auto_api2/runtime/: __init__.py  api.py  loader.py
pytest_auto_api2/utils/: __init__.py
pytest_auto_api2_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: verify_install_flow.ps1  verify_install_flow.sh
skills/pytest-auto-api2-cli-guide/: SKILL.md
test_case/: __init__.py  conftest.py
test_case/Collect/: test_collect_addtool.py  test_collect_delete_tool.py  test_collect_tool_list.py  test_collect_update_tool.py
test_case/Login/: test_login.py
test_case/UserInfo/: test_get_user_info.py
tests_phase3/integration/: test_cli_integration.py
tests_phase3/unit/: test_cli_unit.py  test_replace_value.py
tests_phase4/integration/: test_apifoxcli_case_flow_suite.py  test_apifoxcli_flow_auth_chain.py  test_apifoxcli_human_workflow.py  (+3 more)
utils/: __init__.py
(+62 files in other folders)
